--- a/blackdeck/css/index.css
+++ b/blackdeck/css/index.css
@@ -82,7 +82,7 @@ input, textarea, button {
 }
 
 .hero p {
-    font-size: 20px;
+    font-size: 15px;
     color: #ccc;
 }
 
@@ -106,3 +106,60 @@ form input {
      
 }
 
+/* inicio de sesion*/
+
+.login-title {
+    margin-top: 60px;
+    text-align: center;
+}
+
+login-box {
+    margin-top: 30px;
+    padding: 25px;
+    width: 300px;
+    background-color: #111;
+    border: 2px solid #fff;
+    text-align: center;
+}
+
+.login-box h3 {
+     text-align: center;
+    margin-bottom: 20px;
+    color: #ec6161;
+}
+
+.login-box input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 12px;
+    border: none;
+    outline: none;
+}
+
+.login-box button {
+    width: 100%;
+    padding: 10px;
+    background-color: #ffffff;
+    color: #000000;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.login-box button:hover {
+    background-color: #ec6161;
+    color: #fff;
+    border: 1px solid #fff;
+}
+
+.register-text {
+    margin-top: 15px;
+    font-size: 14px;
+    color: #ccc;
+}
+
+.register-text a {
+    color: #fff;
+    text-decoration: underline;
+}
