Se ha añadido funcionalidad a al pagina mediante codigo php, y tambien se ha implementado conectividad a base de datos mysql

--- a/blackdeck/css/shop.css
+++ b/blackdeck/css/shop.css
@@ -122,7 +122,8 @@ nav a:hover {
 .product-card:hover {
     transform: translateY(-6px);
     box-shadow: 0 16px 40px rgba(0, 0, 0, 0.12);
-}------- IMAGE ---------- */
+}
+/* ------- IMAGE ---------- */
 .image-box {
     position: relative;
     width: 100%;
