--- a/css/register.css
+++ b/css/register.css
@@ -12,7 +12,8 @@ body {
     color: #f2f2f2;
     min-height: 100vh;
     display: flex;
-    flex-direction: column; /* Esto pone el header arriba y el form abajo */
+    flex-direction: column;
+    /* Esto pone el header arriba y el form abajo */
 }
 
 header {
@@ -24,16 +25,21 @@ header {
 .search-container {
     flex: 1;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     margin: 0 20px;
+    margin-left: 190px;
 }
 
 /* Input del buscador */
 #searchInput {
-    width: 500px;              /* Más grande */
-    max-width: 90%;            /* Que no se rompa en pantallas pequeñas */
-    padding: 12px 20px;        /* Alto cómodo */
-    border-radius: 50px;       /* Súper redondo */
+    width: 500px;
+    /* Más grande */
+    max-width: 90%;
+    /* Que no se rompa en pantallas pequeñas */
+    padding: 12px 20px;
+    /* Alto cómodo */
+    border-radius: 50px;
+    /* Súper redondo */
     border: 2px solid #e0e0e0;
     font-size: 17px;
     background-color: #f5f5f5;
@@ -58,7 +64,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
 
 /* LOGO */
@@ -84,43 +90,15 @@ header h1 {
     color: #555;
 }
 
-.header-search {
-    display: flex;
-    flex: 0 1 400px; /* El buscador no crecerá más de 400px */
-    margin: 0 20px;
-    border: 2px solid #333;
-    border-radius: 4px;
-    overflow: hidden;
-}
-
-.header-search input {
-    flex-grow: 1;
-    border: none;
-    padding: 8px 12px;
-    outline: none;
-    font-size: 14px;
-}
-
-.header-search button {
-    background: #333;
-    color: white;
-    border: none;
-    padding: 8px 15px;
-    cursor: pointer;
-    transition: background 0.3s;
-}
-
-.header-search button:hover {
-    background: #555;
-}
 
 .logo {
-    width: 80px;      
-    height: auto;     
+    width: 80px;
+    height: auto;
 }
-.social{
+
+.social {
     margin-bottom: 20px;
-     text-align: center;
-     margin-top: 60px;
-     
+    text-align: center;
+    margin-top: 60px;
+
 }
